--- a/mr/rom.css
+++ b/mr/rom.css
@@ -36,7 +36,13 @@ div.bhoechie-tab-menu3 div.list-group>a{
   margin-bottom: 0;
 }
 div.bhoechie-tab-menu div.list-group>a .glyphicon,
-div.bhoechie-tab-menu div.list-group>a .fa {
+div.bhoechie-tab-menu1 div.list-group>a .glyphicon,
+div.bhoechie-tab-menu2 div.list-group>a .glyphicon,
+div.bhoechie-tab-menu3 div.list-group>a .glyphicon,
+div.bhoechie-tab-menu div.list-group>a .fa,
+div.bhoechie-tab-menu1 div.list-group>a .fa,
+div.bhoechie-tab-menu2 div.list-group>a .fa,
+div.bhoechie-tab-menu3 div.list-group>a .fa {
   color: #5A55A3;
 }
 div.bhoechie-tab-menu div.list-group>a:first-child{
@@ -49,7 +55,16 @@ div.bhoechie-tab-menu div.list-group>a:last-child{
 }
 div.bhoechie-tab-menu div.list-group>a.active,
 div.bhoechie-tab-menu div.list-group>a.active .glyphicon,
-div.bhoechie-tab-menu div.list-group>a.active .fa{
+div.bhoechie-tab-menu div.list-group>a.active .fa,
+div.bhoechie-tab-menu1 div.list-group>a.active,
+div.bhoechie-tab-menu1 div.list-group>a.active .glyphicon,
+div.bhoechie-tab-menu1 div.list-group>a.active .fa,
+div.bhoechie-tab-menu2 div.list-group>a.active,
+div.bhoechie-tab-menu2 div.list-group>a.active .glyphicon,
+div.bhoechie-tab-menu2 div.list-group>a.active .fa,
+div.bhoechie-tab-menu3 div.list-group>a.active,
+div.bhoechie-tab-menu3 div.list-group>a.active .glyphicon,
+div.bhoechie-tab-menu3 div.list-group>a.active .fa{
   background-color: #5A55A3;
   background-image: #5A55A3;
   color: #ffffff;
@@ -90,7 +105,7 @@ div.bhoechie-tab3 div.bhoechie-tab-content:not(.active){
   margin-right:0px!important;
 }
 .nav>li>a{
-  padding:11px 125px;
+  padding:11px 121.2px;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li > a,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
@@ -151,7 +166,7 @@ border-bottom-color: transparent;
     /*top:50%;
     left:50%;
     transform:translate(-50%,-50%);*/
-    width:300px;
+    width:250px;
     min-height:350px;
     background:#fff;
     box-shadow:0 20px 50px rgba(0,0,0,.1);
@@ -172,8 +187,8 @@ border-bottom-color: transparent;
     width:100%;
 }
 .card .box .img {
-    width:240px;
-    height:240px;
+    width:200px;
+    height:200px;
     margin:0 auto;
     border-radius:50%;
     overflow:hidden;
@@ -222,8 +237,8 @@ border-bottom-color: transparent;
     transform:rotateY(360deg);
 }
 .cl{
-  margin-top:2px;
-  margin-bottom:2px;  
+  margin-top:6px;
+  margin-bottom:6px;  
 }
 .container-fluid {
     padding-right: 0px;
